added more text to message

--- a/NodeJs/practice/index.html
+++ b/NodeJs/practice/index.html
@@ -73,8 +73,7 @@ input{
 }
 
 input[type="button"]{ 
-  background:rgba(197,62,126,.33) ! important;
-  color:#fff;
+  color:rgba(197,62,126,.33);
   position:relative;
   left:9px;
   top:25px; 
