modified style on button and produced output

--- a/NodeJs/practice/index.html
+++ b/NodeJs/practice/index.html
@@ -72,8 +72,8 @@ input{
   padding:0 18px; 
 }
 
-input[type="button"]{ 
-  color:rgba(197,62,126,.33);
+button{ 
+  background-color:rgba(197,62,126,.33);
   position:relative;
   left:9px;
   top:25px; 
