--- a/NodeJs/practice/index.html
+++ b/NodeJs/practice/index.html
@@ -73,7 +73,8 @@ input{
 }
 
 button{ 
-  background-color:rgba(197,62,126,.33);
+  border-radius: 10px;
+  
   position:relative;
   left:9px;
   top:25px; 
