added hover styling

--- a/NodeJs/practice/index.html
+++ b/NodeJs/practice/index.html
@@ -73,13 +73,23 @@ input{
 }
 
 button{ 
+  background-color: inherit;
+  color: inherit;
   border-radius: 10px;
-  
+  padding: 0 10px;
+  height: 30px;
   position:relative;
-  left:9px;
-  top:25px; 
+  left:7px;
+  top:15px; 
   width:100px;
   cursor:pointer;
+}
+
+button:hover{
+  background-color: #4c2639;
+  color: #fff;
+  font: 200;
+
 }
 
   </style>
