--- a/NodeJs/practice/index.html
+++ b/NodeJs/practice/index.html
@@ -73,14 +73,14 @@ input{
 }
 
 button{ 
-  background-color: inherit;
-  color: inherit;
+  background-color:ivory;
+  font: x-large;
   border-radius: 10px;
   padding: 0 10px;
   height: 30px;
-  position:relative;
+  /* position:relative;
   left:7px;
-  top:15px; 
+  top:15px;  */
   width:100px;
   cursor:pointer;
 }
@@ -104,7 +104,7 @@ button:hover{
     <form action="/message" id="join-us" method="POST">
       <div class="fields">
         <span>
-         <input placeholder="message" type="text" autocomplete="off" name="form"/>
+         <input placeholder="Type message" type="text" autocomplete="off" name="form"/>
         </span>
       </div>
       <div class="submit">
