--- a/HTML/Task1/index.html
+++ b/HTML/Task1/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <h1>First Web Page</h1>
+    <h1>First Web Page &#8986;</h1>
 
     <p>
         kindly do exactly what you see here as it will affect your score <br/>
