added dummy text and linked stylesheets

--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/css/pink.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
     <title>Kelly-Eric | Software Engineer | Consultant</title>
 </head>
 <body>
     <!--Main container-->
     <main class="container">
+
         <!--Aside-->
         <aside class="aside">
-
+            All Aside text shows here
         </aside>
         <!--Aside end-->
+
+        <!--Main content-->
+        <div class="content">
+            <section class="home section">
+                All home section text shows here
+            </section>
+        </div>
+        <!--Main content end-->
+
     </main>
     <!--Main container end-->
 </body>
