--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -14,7 +14,13 @@
 
         <!--Aside-->
         <aside class="aside">
-            All Aside text shows here
+
+            <!--Logo section-->
+            <div class="logo">
+                <a href="#">Kelly-Eric</a>
+            </div>
+            <!--Logo section end-->
+            
         </aside>
         <!--Aside end-->
 
