added navs and copyright text

--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -20,6 +20,18 @@
                 <a href="#">Kelly-Eric</a>
             </div>
             <!--Logo section end-->
+
+            <!--Navigation links-->
+            <nav class="nav">
+                Navssss
+            </nav>
+            <!--Navigation links end-->
+
+            <!--Copyright text-->
+            <div class="copyright-text">
+                &copy; All rights reserved, 2020.
+            </div>
+            <!--Copyright text end-->
             
         </aside>
         <!--Aside end-->
