added nav li anchors and font awesome on aside

--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -23,7 +23,10 @@
 
             <!--Navigation links-->
             <nav class="nav">
-                Navssss
+                <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#"><i class="fa fa-home"></i>About</a></li>
+                <li><a href="#"><i class="fa fa-home"></i>Contact</a></li>
+                <li><a href="#"><i class="fa fa-home"></i>Projects</a></li>
             </nav>
             <!--Navigation links end-->
 
@@ -32,7 +35,7 @@
                 &copy; All rights reserved, 2020.
             </div>
             <!--Copyright text end-->
-            
+
         </aside>
         <!--Aside end-->
 
