--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/pink.css">
     <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+
     <title>Kelly-Eric | Software Engineer | Consultant</title>
 </head>
 <body>
@@ -24,15 +26,15 @@
             <!--Navigation links-->
             <nav class="nav">
                 <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-home"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-home"></i>Contact</a></li>
-                <li><a href="#"><i class="fa fa-home"></i>Projects</a></li>
+                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i>Projects</a></li>
             </nav>
             <!--Navigation links end-->
 
             <!--Copyright text-->
             <div class="copyright-text">
-                &copy; All rights reserved, 2020.
+                &copy; 2020,  All rights reserved.
             </div>
             <!--Copyright text end-->
 
