--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -23,9 +23,15 @@
             </div>
             <!--Logo section end-->
 
+            <!--Navigation link toggler button-->
+            <div class="nav-toggler">
+                <span></span>
+            </div>
+            <!--Navigation link toggler button end-->
+
             <!--Navigation links-->
             <nav class="nav">
-                <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fa fa-user"></i>About</a></li>
                 <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
                 <li><a href="#"><i class="fa fa-briefcase"></i>Projects</a></li>
@@ -43,9 +49,17 @@
 
         <!--Main content-->
         <div class="content">
+            <!--Home section-->
             <section class="home section">
-                All home section text shows here
+                <div class="continer">
+                    <div class="intro">
+                        <img src="./assets/imgs/carebox.jpg" width="30%" alt="Profile Image" class="shadow-dark">
+                        <h1>Kelly-Eric</h1>
+                        <p>I'm a Software Engineer</p>
+                    </div>
+                </div>
             </section>
+            <!--Home section end-->
         </div>
         <!--Main content end-->
 
