added style to social links

--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -56,6 +56,12 @@
                         <img src="./assets/imgs/carebox.jpg" width="30%" alt="Profile Image" class="shadow-dark">
                         <h1>Kelly-Eric</h1>
                         <p>I'm a Software Engineer</p>
+                        <div class="social">
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="#"><i class="fa fa-linkedin"></i></a>
+                        </div>
                     </div>
                 </div>
             </section>
