Updated home section div

--- a/HTML/Task3/index.html
+++ b/HTML/Task3/index.html
@@ -51,18 +51,19 @@
         <div class="content">
             <!--Home section-->
             <section class="home section">
-                <div class="continer">
-                    <div class="intro">
-                        <img src="./assets/imgs/carebox.jpg" width="30%" alt="Profile Image" class="shadow-dark">
-                        <h1>Kelly-Eric</h1>
-                        <p>I'm a Software Engineer</p>
-                        <div class="social">
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
+                <div class="container">
+                    <div class="intro" style="z-index: 1; position: absolute; top: 30px; margin: 150px 50px;">                        
+                        <h1 style="padding: 10px; margin: 20px;">Hi,</h1>
+                        <p>I am an Enterprise Support Engineer turned Software Engineer</p>
                     </div>
+                    <img src="./assets/imgs/work.jpg" width="100%" alt="Profile Image">
+                    <div class="social">
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
                 </div>
             </section>
             <!--Home section end-->
